[package]
name = "trash-cli"
version = "0.1.0"
edition = "2021"
description = "A small CLI tool to move files to the trash"
license = "MIT"
repository = "https://github.com/orf/trash-cli"

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
trash = "5.2.1"

[profile.release]
lto = true
codegen-units = 1
incremental = false