[package]
name = "trash-rs-cli"
version = "0.3.3"
edition = "2021"
description = "A small CLI tool to move files to the trash"
license = "MIT"
repository = "https://github.com/orf/trash"

[[bin]]
name = "trash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["derive"] }
trash = "5.2.1"

[profile.release]
lto = true
codegen-units = 1
incremental = false
